add icones sur P2

--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
-<!DOCTYPE>
+<!DOCTYPE html>
     <html>
         <head>
             <meta charset="utf-8"/>
-            <link rel="stylesheet" href="p2.css" />
+            <link rel="preconnect » href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2? display=swap » rel="stylesheet">
+
+            <link rel="stylesheet" href="style.css" />
         </head>
         <body>
+            <!--header-->
             <header>
                 <nav>
-                    <img src="C:\Users\famille bore\Pictures\Reservia@3x.png" alt="logo"/>
+                    <img src="images/logo/Reservia@3x.png" alt="logo"/>
                     <ul>
                         <li>hebergements</li>
                         <li><mark>activités</mark></li>
@@ -15,6 +19,24 @@
                     </ul>
                 </nav>
             </header>
+            <!--main-->
+            <main>
+                <div id="section1">
+                    <p>
+                        <h1>trouvez votre hébergement pour des vacances de reve</h1>
+                        En plein centre ville ou en pleine nature
+                    </p>
+                    <div id="filtre">
+                        <div class="ubication"></div>
+                        <div class="flt"></div>
+                        <div class="eco"></div>
+                        <div class="fml"></div>
+                        <div class="rmtq"></div>
+                        <div class="animaux"></div>
+                    </div>
+                    <p> <img src="image/icone-font-awesome/info-circle-solid.svg"> plus de 500 logements sont disponibles dans cette ville</p>
+                </div>
+            </main>
 
         </body>
         
