--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="logoreservia">
                 <img src="images/logo/Reservia@3x.png" alt="logo" />
             </div>
-            <ul>
+            <ul class="navtitre">
                 <li>hebergements</li>
                 <li><mark>activités</mark></li>
                 <li>s'inscrire</li>
@@ -88,7 +88,7 @@
                                 <img class="pht" src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg"
                                     alt="chambre lits etagères">
                                 <figcaption class="caption">
-                                    <h3>Auberge la cannebiere</h3>
+                                    <h3 class="descp">Auberge la cannebiere</h3>
                                 </figcaption>
                             </figure>
                             <p class="cat"> Nuit à partir de <strong>25€</strong></p>
@@ -97,7 +97,7 @@
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
-                                <div class="5°etoileaubrg"><i class="fas fa-star"></i></div>
+                                <div class="gris"><i class="fas fa-star"></i></div>
                             </div>
                         </a>
                     </article>
@@ -107,7 +107,7 @@
                                 <img class="pht" src="images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg"
                                     alt="chambre lits separés">
                                 <figcaption class="caption">
-                                    <h3>Hotel du port</h3>
+                                    <h3 class="descp">Hotel du port</h3>
                                 </figcaption>
                             </figure>
                             <p class="cat">Nuit à partir de <strong>52€</strong></strong></p>
@@ -126,16 +126,18 @@
                                 <img class="pht" src="images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg"
                                     alt="chambre lit double grand miroir">
                                 <figcaption class="caption">
-                                    <h3 class="">Hôtel Les mouettes</h3>
+                                    <h3 class="descp">Hôtel Les mouettes</h3>
                                 </figcaption>
                             </figure>
+
                             <p class="cat">Nuit à partir de <strong>76€</strong></p>
+
                             <div class="etoile">
                                 <i class="fas fa-star "></i>
                                 <i class="fas fa-star "></i>
                                 <i class="fas fa-star "></i>
                                 <i class="fas fa-star "></i>
-                                <div class="5°etoilemouettes"><i class="fas fa-star "></i></div>
+                                <div class="gris"><i class="fas fa-star "></i></div>
                             </div>
                         </a>
                     </article>
@@ -145,7 +147,7 @@
                                 <img class="pht" src="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg"
                                     alt="chambre lit double avec cadre fond marin">
                                 <figcaption class="caption">
-                                    <h3 class="">Hotel de la mer</h3>
+                                    <h3 class="descp">Hotel de la mer</h3>
                                 </figcaption>
                             </figure>
                             <p class="cat">Nuit à partir de <strong class="">46€</strong></p>
@@ -153,7 +155,7 @@
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
-                                <div class="4et5°etoilehdelamer"> <i class="fas fa-star"></i>
+                                <div class="gris"> <i class="fas fa-star"></i>
                                     <i class="fas fa-star"></i>
                                 </div>
                             </div>
@@ -165,7 +167,7 @@
                                 <img class="pht" src="images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg"
                                     alt="chambre mixte">
                                 <figcaption class="caption">
-                                    <h3>Auberge Le Panier</h3>
+                                    <h3 class="descp">Auberge Le Panier</h3>
                                 </figcaption>
                             </figure>
                             <p class="cat">Nuit à partir de <strong>23€</strong></p>
@@ -174,7 +176,7 @@
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
-                                <div class="5°etoilelepanier"> <i class="fas fa-star"></i> </div>
+                                <div class="gris"> <i class="fas fa-star"></i> </div>
                             </div>
                         </a>
                     </article>
@@ -185,7 +187,7 @@
                                     src="images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg"
                                     alt="chambre avec balcon">
                                 <figcaption class="caption">
-                                    <h3>Hôtel chez Amina</h3>
+                                    <h3 class="descp">Hôtel chez Amina</h3>
                                 </figcaption>
                             </figure>
                             <p class="cat">Nuit à partir de <strong class="">96€</strong></p>
@@ -247,7 +249,7 @@
                                         <i class="fas fa-star"></i>
                                         <i class="fas fa-star"></i>
                                         <i class="fas fa-star"></i>
-                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star gris"></i>
                                     </div>
                                 </div>
                             </a>
@@ -269,7 +271,7 @@
                                         <i class="fas fa-star"></i>
                                         <i class="fas fa-star"></i>
                                         <i class="fas fa-star"></i>
-                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star gris"></i>
                                     </div>
                                 </div>
                             </a>
@@ -331,18 +333,24 @@
     <footer>
         <div class="feet">
             <div class="boitefeet">
-                <div class="titrefeet"><h3>A propos</h3></div>
+                <div class="titrefeet">
+                    <h3>A propos</h3>
+                </div>
                 <a class="feeta" href="">Fonctionnement du site</a>
                 <a class="feeta" href="">Conditions générales de vente</a>
                 <a class="feeta" href="">Données et confidentialité</a>
             </div>
             <div class="boitefeet">
-                <div class="titrefeet"><h3>Nos hébergements</h3></div>
+                <div class="titrefeet">
+                    <h3>Nos hébergements</h3>
+                </div>
                 <a class="feeta" href="">Charte qualité</a>
                 <a class="feeta" href="">Soumettre votre hôtel</a>
             </div>
             <div class="boitefeet">
-                <div class="titrefeet"> <h3> Assistance</h3></div>
+                <div class="titrefeet">
+                    <h3> Assistance</h3>
+                </div>
                 <a class="feeta" href="">Centre d'aide</a>
                 <a class="feeta" href="">Nous contacter</a>
             </div>
