--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             </div>
             <ul class="navtitre">
                 <div class="linav" href="tote">
+                    <li class="linavhbgm inscription">s'inscrire</li>
                     <li class="linavhbgm">hebergements </li>
                     <li class="linavhbgm lina">activités</li>
                 </div>
