--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
             </div>
             <ul class="navtitre">
                 <div class="linav" href="tote">
-                    <li class="linavhbgm inscription">s'inscrire</li>
-                    <li class="linavhbgm">hebergements </li>
-                    <li class="linavhbgm lina">activités</li>
+                    <li class="linavhbgm">Hebergements </li>
+                    <li class="linavhbgm lina">Activités</li>
+                    <li class="linavhbgm inscription">S'inscrire</li>
                 </div>
 
             </ul>
@@ -84,7 +84,7 @@
         <section id="hbgm" class="hbgm">
             <div class="hbgmmain">
                 <header class="hbgmheader">
-                    <h2>Hebergement à Marseille</h2>
+                    <h2 class="titremarseille">Hebergement à Marseille</h2>
                 </header>
                 <div class="boitehebergement">
                     <article class="hbgmart">
