--- a/index.html
+++ b/index.html
@@ -12,6 +12,18 @@
     <link rel="stylesheet" href="responsivestyle.css" />
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="tablettestyle.css" />
+    <style>
+        @media only screen and (min-width:1024px) {
+            .hbgm{
+                padding: 0 20px;
+            }
+            .activite{
+                width: 100%;
+                padding: 0 20px;
+            }
+            
+        }
+    </style>
 </head>
 
 <body>
