--- a/index.html
+++ b/index.html
@@ -9,21 +9,9 @@
 
     <script src="https://kit.fontawesome.com/0e667d917f.js" crossorigin="anonymous"></script>
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link rel="stylesheet" href="responsivestyle.css" />
+    <link rel="stylesheet" media="screen and (max-width: 767px)" href="responsivestyle.css" />
     <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="tablettestyle.css" />
-    <style>
-        @media only screen and (min-width:1024px) {
-            .hbgm{
-                padding: 0 20px;
-            }
-            .activite{
-                width: 100%;
-                padding: 0 20px;
-            }
-            
-        }
-    </style>
+    <link rel="stylesheet" media="screen and (min-width: 768px) and (max-width: 1023px)" href="tablettestyle.css" />
 </head>
 
 <body>
@@ -301,7 +289,7 @@
         <!--Activité marsseille-->
         <h2 class="activiteTitre">Activités à Marseille</h2>
         <section class="activite" id="activite">
-            
+
             <a href="#" class="boite activite1">
                 <div class="imgactivite">
                     <img class="phtactivite" src="images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"
