--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             </form>
             <div class="filtericone">
                 
-                    <h2> Filtres</h2>
+                    <h2 class="fil"> Filtres</h2>
                 
 
                 <div class="filtre">
