--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
             </div>
             <ul class="navtitre">
                 
-                    <li class="linavhbgm">Hebergements </li>
-                    <li class="linavhbgm lina">Activités</li>
+                    <li class="linavhbgm linui"> <a class="linu" href="#hbgm"> Hebergements</a> </li>
+                    <li class="linavhbgm"> <a class="lina" href="#hbgm"> Activités</a> </li>
                     <li class="linavhbgm inscription">S'inscrire</li>
                 
 
